[package]
name = "minish-cap-auto-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/CryZe/asr", features = ["gba", "integer-vars"] }
bitflags = "1.3.2"
bytemuck = "1.12.1"
spinning_top = "0.2.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
# strip = true

[profile.release.build-override]
opt-level = 0
